# cocogum_registros

./: .env  pyproject.toml  requeriments.txt
app/: database.py  main.py
app/core/: __init__.py  security.py
app/crud/: user.py
app/models/: user.py
app/routers/: auth.py
app/schemas/: user.py
tests/: test_aiohttp.py
